--- a/blog/templates/blog/post_all.html
+++ b/blog/templates/blog/post_all.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>post_all</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}post_all.html{% endblock %}
+
+{% block content %}
+<div id="content">
+
     <h1>Blog list</h1>
 
     {%for post in posts%}
@@ -14,6 +14,7 @@
     {%endfor %}
 
     <br/>
+
 
     <div>
         <span>
@@ -28,5 +29,6 @@
             {% endif %}
         </span>
     </div>
-</body>
-</html>
+
+</div>
+{% endblock %}
