--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>archive</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}post_archive.html{% endblock %}
+
+{% block content %}
+<div id="content">
+
     <h1>Post Archives until {% now "N d, Y" %}</h1>
     <ul>
         {% for date in date_list %}
@@ -22,5 +22,5 @@
             {% endfor %}
         </ul>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
