--- a/blog/templates/blog/post_archive_day.html
+++ b/blog/templates/blog/post_archive_day.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Archive Day</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}post_archive_day.html{% endblock %}
+
+{% block content %}
+<div id="content">
+
     <h1>Post Archives for {{ day|date:"N d, Y"</h1>
     <div>
         <ul>
@@ -14,5 +14,5 @@
             {% endfor %}
         </ul>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
