--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>post_detail</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}post_detail.html{% endblock %}
+
+{% block content %}
+<div id="content">
     <h2>{{ object.title }}</h2>
 
     <p class="other_posts">
@@ -22,5 +21,6 @@
     <div class="body">
         {{ object.content|linebreaks }}
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
+
