--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -6,6 +6,11 @@
 
 <body>
 
+{% extends "base.html" %}
+
+{% block title %}Django Bookmark Detail{% endblock %}
+
+{% block content %}
 <div id="content">
 	<h1>{{ object.title }}</h1>
 	
@@ -14,6 +19,7 @@
 	</ul>
 
 </div>
+{% endblock %}
 
 </body>
 </html>
