--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>home</title>
-</head>
-<body>
+
     {% extends "base.html" %}
 
     {% block title %}home.html{% endblock %}
@@ -26,7 +20,7 @@
 
         <table id="applist">
             <tr>
-                <td><b><i><a href="#">Bookmark</a></i></b></td>
+                <td><b><i><a href="{% url 'bookmark:index' %}">Bookmark</a></i></b></td>
                 <td>You can write your own post and share to others.
                     Donec id elit non mi porta gravida at eget metus.
                     Fusce dapibus, tellus ac cursus commodo</td>
@@ -35,7 +29,7 @@
             </tr>
 
             <tr>
-                <td><b><i><a href="#">Blog</a></i></b></td>
+                <td><b><i><a href="{% url 'blog:index' %}">Blog</a></i></b></td>
                 <td>You can write your own post and share to others.
                     Donec id elit non mi porta gravida at eget metus.
                     Fusce dapibus, tellus ac cursus commodo</td>
@@ -62,5 +56,3 @@
         &copy; chayeon 2017
     </div>
     {%endblock footer %}
-</body>
-</html>
