--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,3 +1,4 @@
+
 {% extends "base.html" %}
 
 {% block title %}post_detail.html{% endblock %}
@@ -21,6 +22,17 @@
     <div class="body">
         {{ object.content|linebreaks }}
     </div>
+
+    <div>
+        <b>TAGS: </b>
+        {% load tagging_tags %}
+        {% tags_for_object object as tags %}
+        {% for tag in tags %}
+        <a href = "{% url 'blog:tagged_object_list' tag.name %}">{{tag.name}}</a>
+        {% endfor %}
+        <a href="{% url 'blog:tag_cloud' %}"><i>[ TagCloud ]</i></a>
+    </div>
 </div>
+
 {% endblock %}
 
